Fix alignment

--- a/public/scss/components/_actionbar.scss
+++ b/public/scss/components/_actionbar.scss
@@ -1,7 +1,7 @@
 .actionbar {
 	background: rgba(#000, 0.5);
 	left: 0;
-	padding: 0 1em;
+	padding: 0 1em 0 2em;
 	position: absolute;
 	top: 0;
 	width: 100%;
@@ -12,7 +12,7 @@
 	background: transparent url("/images/logo--light.png") 0 0 no-repeat;
 	@include background-size(cover);
 	display: block;
-	left: 15px;
+	left: 1.5em;
 	margin: -15px 0 0 0;
 	position: absolute;
 	top: 50%;
