--- a/public/scss/themes/halloween/components/_footer.scss
+++ b/public/scss/themes/halloween/components/_footer.scss
@@ -6,51 +6,9 @@
 	background: #000;
 	bottom: 0;
 	color: #4e5052;
-	left: 0;
-	padding: 0 5%;
-	position: absolute;
-	width: 100%;
-}
-
-.footer__content {
-	font-size: 12px;
-	line-height: 1.5;
-	overflow: hidden;
-	padding-top: 1.7em;
-
-	a {
-		color: #8e8e8e;
-		text-decoration: none;
-
-		&:hover {
-			color: lighten(#8e8e8e, 5%);
-		}
-	}
-}
-
-.footer__credits {
-	float: right;
-	text-align: right;
-	white-space: nowrap;
-
-	a {
-		display: inline-block;
-		margin-left: 1em;
-		line-height: 120px;
-		vertical-align: middle;
-	}
-}
-/**
- * @name Footer
- */
-
-.footer {
-	background: #000;
-	bottom: 0;
-	color: #4e5052;
 	height: 88px;
 	left: 0;
-	padding: 0 5%;
+	padding: 0 1.5em;
 	position: absolute;
 	width: 100%;
 }
@@ -76,7 +34,7 @@
 	text-align: right;
 	white-space: nowrap;
 }
-
+ 
 .footer__credits__pointless,
 .footer__credits__viget {
 	display: inline-block;
